# tox-nox-python-tests

./: .gitignore  .gitlab-ci.matrix.yml  .gitlab-ci.nox.yml  .gitlab-ci.tox.yml  .gitlab-ci.yml  LICENSE  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: python-tests-matrix.yml  python-tests-nox.yml  python-tests-tox.yml  python-tests.yml
tests/: test_calculator.py
tox_nox_python_tests/: calculator.py  main.py
